--- a/main.html
+++ b/main.html
@@ -7,9 +7,31 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<img src="https://us.123rf.com/450wm/fizkes/fizkes2001/fizkes200101262/fizkes200101262.jpg?ver=6" alt="rakshita ganesh">
+	<h3>Rakshita Ganesh</h3>
+	<a href="https://www.linkedin.com/in/rakshitaganesh/">
+		<label for="name">Rakshita Ganesh</label>
+	</a>
+	<section id="skills">
+		Skills
+		<div>    Time management.
+			Effective communication.
+			Emotional intelligence.
+			Conflict management.
+			Teamwork skills.
+			Stress management.
+			Problem-solving.
+			Productivity & organization.</div>
+	</section>
+	<section id="projects">
+		projects
+		<ul>
+			<li>crop water requirement of paddy</li>
+			<li>construction management</li>
+			<li>seismic region reading</li>
+		</ul>
+	</section>
+
 
 </body>
 
